Projet GL/test/src/test/deca/codegen/valid/created/incr4/without-this.deca
//

class A{
    int x;

    int getX(){
        return x;
    }
}