Projet GL/test/src/test/deca/codegen/invalid/created/ima/floatoverflow.deca
//should return arithmetic overflow error

class A{
    protected float x = 0x1.fffffep126;
    int getX(){
        return 100*this.x;
    }
}

{
    A a = new A();
    a.getX();
}